frontend/styles.css
.container {
  margin: auto auto;
}

.h2 {
  font-size: 30px;
}

.decorativebox {
  position: absolute;
  width: 288px;
  height: 64px;
  left: 120px;
  top: 0px;
  background: #C4C4C4;
}

.topnav {
  overflow: hidden;
}

.topnav a {
  float: right;
  color: #222222;
  text-align: center;
  padding: 14px 40px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #C4C4C4;
  color: #F9F9FA;
}

.topnav a.active {
  background-color: #F0CF7F;
  color: #222222;
}

.topnav a.active:hover {
  background-color: #3A3B40;
  color: #F9F9FA;
}

.title {
  color: #222222;
  width: 744px;
  height: 137px;
  left: 120px;
  top: 163px;

  font-family: Khula;
  font-style: normal;
  font-weight: 800;
  font-size: 72px;
  line-height: 116px;
  display: flex;
  align-items: center;

}

.button {
  background-color: #F36E30;
  border: none;
  color: #F9F9FA;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 73px;

  font-family: Khula;
  font-style: normal;
  font-weight: 600;
  line-height: 51px;
  display: flex;
  align-items: center;
}

#getstarted {
  position: absolute;
  width: 288px;
  height: 62px;
  left: 120px;
  top: 452px;
}

.landing-grid {
  display: grid;
  grid-template-columns: 50% 50%;
  padding: 30px;
}

#howitworks {
  background-color: #F0CF7F;
  padding: 100px;
}

.HIW-grid {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-gap: 50px;

}

#learn-more {
  padding-left: 95px;
  margin: auto;
  width: 288px;
  height: 68px;
  text-align: center;
  font-size: 20px;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
  justify-self: center;
}

#community {
  background-color: #3A3B40;
  padding: 100px;
  color: #F9F9FA;
}

#spotlight {
  color: #F9F9FA;
  text-align: center;
}

#community-right {
  text-align: right;
}

#more-stories {
  font-size: 20px;
}

body {
  color: rgba(34,34,34,1);
  position: absolute;
  font-family: Khula;
  font-weight: Regular;
  font-size: 18px;
}

.description-entry {
  width: 288px;
  height: 68px;
}

